--- a/design/src/templates/partials/body-scripts.hbs
+++ b/design/src/templates/partials/body-scripts.hbs
@@ -1,3 +1,5 @@
 {{!-- Não usar para nada que não seja o Tagmanager --}}
 <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP23W7C"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
