--- a/design/src/templates/partials/head-scripts.hbs
+++ b/design/src/templates/partials/head-scripts.hbs
@@ -1,6 +1,5 @@
 
 <link href="//fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,900" rel="stylesheet">
-<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/main.min.css">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
@@ -12,3 +11,12 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f78d48">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
+
+<script src="https://kit.fontawesome.com/d2bf3226d5.js"></script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NP23W7C');</script>
+<!-- End Google Tag Manager -->
