--- a/design/src/sass/project/_variables.scss
+++ b/design/src/sass/project/_variables.scss
@@ -16,6 +16,7 @@ $green-atomic: #8CC63F;
 $grafite:   #5F5F60;
 $moon-gray:   #86868D;
 $snow-white:    #F1F1F1;
+$ash-gray: #E8E8E8;
 
 //Secondary Colors
 $red-blood:     #D9000D;
@@ -32,7 +33,7 @@ $primary-color: $red-blood;
 $secondary-color: $green-atomic;
 $base-light: $white;
 $base-dark: $black;
-$background-color: $snow-white;
+$background-color: $ash-gray;
 $main-light: #979ca3;
 
 //Conditional colors
