Structure do cover on desktop

--- a/design/src/sass/project/_variables.scss
+++ b/design/src/sass/project/_variables.scss
@@ -69,3 +69,8 @@ $min_font: 14px;
 $max_font: 18px;
 
 $gradient-main: #173a81, #ce1b49;
+
+//Page Depth
+$z-default: 1;
+$z-second: 5;
+$z-third: 10;
