--- a/design/src/sass/project/pages/_portfolio.scss
+++ b/design/src/sass/project/pages/_portfolio.scss
@@ -344,9 +344,49 @@
 
         ul {
             font-size: 2em;
+
+            > li {
+                margin-bottom: .5em;
+            }
         }
         a {
+            position: relative;
+            display: inline-block;
+            line-height: 1;
             color: $primary-color;
+            font-weight: 200;
+
+            strong {
+                font-weight: 700;
+            }
+            span {
+                position: relative;
+                z-index: 0;
+                display: inline-block;
+            }
+            &:after {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                z-index: -1;
+                display: block;
+                width: 0;
+                height: .75em;
+                background-color: $base-dark;
+                opacity: 0;
+                transition: $transition-default;
+            }
+            &:hover,
+            &:focus {
+                text-decoration: none;
+                
+                &:after {
+                    width: 100%;
+                    opacity: .75;
+                    transition: $transition-default;
+                }
+            }
         }
     }
     &--ux {
@@ -361,6 +401,10 @@
         }
         a {
             color: $main-color;
+
+            &:after {
+                background-color: $yellow-mother;// $primary-color;
+            }
         }
     }
     &--ui {
@@ -375,6 +419,10 @@
         }
         a {
             color: $primary-color;
+
+            &:after {
+                background-color: $yellow-mother;// $main-color;
+            }
         }
     }
 }
