--- a/design/src/sass/project/pages/_portfolio.scss
+++ b/design/src/sass/project/pages/_portfolio.scss
@@ -24,10 +24,19 @@
             right: 0;
 
             &:before {
-                bottom: -60vh;
+                bottom: -80vh;
                 right: -25vh;
                 transform: rotate(45deg);
                 background-color: $main-color;
+
+                @media (max-width: $screen-tablet) and (orientation: landscape) {
+                    bottom: -60vh;
+                    right: -25vh;
+                }
+                @media (min-width: $screen-tablet) {
+                    bottom: -60vh;
+                    right: -25vh;
+                }
             }
         }
     }
@@ -89,6 +98,10 @@
             &--ui {
                 bottom: 100vh;
                 right: 0;
+
+                @media (max-width: $screen-tablet) and (orientation: landscape) {
+                    bottom: 90vh;
+                }
     
                 &:before {
                     bottom: -10vh;
@@ -124,10 +137,14 @@
         .cta-cover {
             &--ui {
                 height: 0;
-                top: -100vh;
+                top: 0;
                 left: 0;
                 opacity: 0;
                 transition: all .35s ease-in-out;
+
+                @media (min-width: $screen-tablet) {
+                    top: -100vh;
+                }
 
                 &:hover,
                 &:focus {
@@ -143,9 +160,16 @@
                 }
             }
             &--ux {
-                top: -30vh;
+                top: -8vh;
                 right: 0;
                 left: calc(100vw - 40vh);
+
+                @media (max-width: $screen-tablet) and (orientation: landscape) {
+                    top: -30vh;
+                }
+                @media (min-width: $screen-tablet) {
+                    top: -30vh;
+                }
     
                 &:before {
                     bottom: -10vh;
@@ -177,11 +201,18 @@
     position: absolute;
     z-index: 1;
     font-weight: 700;
-    font-size: 13em;
+    font-size: 8em;
     color: $background-color;
     cursor: default !important;
     opacity: .9;
     transition: all .35s ease-in-out;
+
+    @media (max-width: $screen-tablet) and (orientation: landscape) {
+        font-size: 6.5em;
+    }
+    @media (min-width: $screen-tablet) {
+        font-size: 13em;
+    }
 
     &,
     &:hover,
@@ -213,9 +244,16 @@
     span {
         position: relative;
         display: block;
-        width: 60vh;
+        width: 100vw;
         text-align: center;
         cursor: pointer;
+        
+        @media (max-width: $screen-tablet) and (orientation: landscape) {
+            width: 50vw;
+        }
+        @media (min-width: #{$screen-tablet - 1}) {
+            width: 60vh;
+        }
     }
     &--ux {
         top: 0;
@@ -224,12 +262,30 @@
         transition: all .35s ease-in-out;
 
         &:before {
-            top: -60vh;
-            left: -25vh;
+            top: -80vh;
+            left: -35vh;
             transform: rotate(-45deg);
             opacity: .9;
             background-color: $primary-color;
             transition: all .35s ease-in-out;
+
+            @media (max-width: $screen-tablet) and (orientation: landscape) {
+                top: -50vh;
+                left: -25vh;
+            }
+            @media (min-width: $screen-tablet) {
+                top: -60vh;
+                left: -25vh;
+            }
+        }
+        span {
+            text-align: left;
+            padding-left: .45em;
+            
+            @media (min-width: $screen-tablet) {
+                text-align: center;
+                padding-left: 0;
+            }
         }
     }
     &--ui {
@@ -243,6 +299,15 @@
             background-color: $main-color;
             opacity: .9;
             transition: all .35s ease-in-out;
+        }
+        span {
+            text-align: right;
+            padding-right: .45em;
+            
+            @media (min-width: $screen-tablet) {
+                text-align: center;
+                padding-right: 0;
+            }
         }
     }
 }
@@ -293,11 +358,19 @@
     z-index: $z-second;
     opacity: 0;
     box-sizing: border-box;
-    width: 50vw;
+    width: 100vw;
     height: 100vh;
-    padding: 2rem 4rem;
+    padding: 0 2rem;
     transform: scale(0);
     transition: $transition-default;
+
+    @media (max-width: $screen-tablet) and (orientation: landscape) {
+        //width: 50vw;
+    }
+    @media (min-width: $screen-tablet) {
+        width: 50vw;
+        padding: 2rem 4rem;
+    }
 
     .page-back {
         position: relative;
@@ -315,9 +388,18 @@
     }
     .title {
         line-height: .9;
-        font-size: 6.5rem;
+        font-size: 3.5rem;
         font-weight: 700;
         text-transform: uppercase;
+
+        @media (max-width: $screen-tablet) and (orientation: landscape) {
+            width: 45vw;
+            font-size: 2.5em;
+        }
+        @media (min-width: $screen-tablet) {
+            width: auto;
+            font-size: 6.5em;
+        }
 
         b {
             font-size: 2em;
@@ -340,21 +422,41 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        padding: 2rem 4rem;
+        padding: 1rem 2rem 0;
+
+        @media (min-width: $screen-tablet) {
+            width: 50vw;
+            padding: 2rem 4rem;
+        }
 
         ul {
-            font-size: 2em;
+            font-size: 1.6em;
+
+            @media (min-width: $screen-tablet) {
+                font-size: 2em;
+            }
 
             > li {
-                margin-bottom: .5em;
+                margin-bottom: .25em;
+
+                @media (min-width: $screen-tablet) {
+                    margin-bottom: .5em;
+                }
             }
         }
         a {
             position: relative;
             display: inline-block;
             line-height: 1;
-            color: $primary-color;
+            color: $base-light !important;
             font-weight: 200;
+
+            @media (max-width: $screen-tablet) and (orientation: landscape) {
+                color: $primary-color !important;
+            }
+            @media (min-width: $screen-tablet) {
+                color: $primary-color !important;
+            }
 
             strong {
                 font-weight: 700;
@@ -362,10 +464,23 @@
             span {
                 position: relative;
                 z-index: 0;
-                display: inline-block;
+                display: inline;
+                line-height: 1.4;
+                background-color: $main-color;
+
+                @media (max-width: $screen-tablet) and (orientation: landscape) {
+                    display: inline-block;
+                    background-color: transparent;
+                    line-height: 1;
+                }
+                @media (min-width: $screen-tablet) {
+                    display: inline-block;
+                    background-color: transparent;
+                    line-height: 1;
+                }
             }
             &:after {
-                content: "";
+                //content: "";
                 position: absolute;
                 bottom: 0;
                 left: 0;
@@ -376,6 +491,13 @@
                 background-color: $base-dark;
                 opacity: 0;
                 transition: $transition-default;
+
+                @media (max-width: $screen-tablet) and (orientation: landscape) {
+                    content: "";
+                }
+                @media (min-width: $screen-tablet) {
+                    content: "";
+                }
             }
             &:hover,
             &:focus {
@@ -391,7 +513,14 @@
     }
     &--ux {
         .page-back {
-            color: $main-color;
+            color: $base-light;
+
+            @media (max-width: $screen-tablet) and (orientation: landscape) {
+                color: $main-color;
+            }
+            @media (min-width: $screen-tablet) {
+                color: $main-color;
+            }
         }
         .title {
             color: $primary-color;
@@ -406,10 +535,31 @@
                 background-color: $yellow-mother;// $primary-color;
             }
         }
+        .page-content__list {
+            span {
+                background-color: $primary-color;
+
+                @media (max-width: $screen-tablet) and (orientation: landscape) {
+                    display: inline-block;
+                    background-color: transparent;
+                }
+                @media (min-width: $screen-tablet) {
+                    display: inline-block;
+                    background-color: transparent;
+                }
+            }
+        }
     }
     &--ui {
         .page-back {
-            color: $primary-color;
+            color: $base-light;
+            
+            @media (max-width: $screen-tablet) and (orientation: landscape) {
+                color: $primary-color;
+            }
+            @media (min-width: $screen-tablet) {
+                color: $primary-color;
+            }
         }
         .title {
             color: $main-color;
@@ -422,6 +572,20 @@
 
             &:after {
                 background-color: $yellow-mother;// $main-color;
+            }
+        }
+        .page-content__list {
+            span {
+                background-color: $main-color;
+
+                @media (max-width: $screen-tablet) and (orientation: landscape) {
+                    display: inline-block;
+                    background-color: transparent;
+                }
+                @media (min-width: $screen-tablet) {
+                    display: inline-block;
+                    background-color: transparent;
+                }
             }
         }
     }
