Internal page done with content, responsive

--- a/design/src/sass/main.scss
+++ b/design/src/sass/main.scss
@@ -4,5 +4,8 @@
 @import "project/variables";
 @import "project/mixins";
 @import "project/global";
+@import "project/atoms/typography";
+@import "project/atoms/buttons";
 
 @import "project/pages/portfolio";
+@import "project/organisms/portfolio-internal";
