--- a/design/src/sass/project/_variables.scss
+++ b/design/src/sass/project/_variables.scss
@@ -13,7 +13,7 @@
 //Primary Colors
 $orange-crazy: #F79829;
 $green-atomic: #8CC63F;
-$grafite:   #5F5F60;
+$grafite:   #707070;
 $moon-gray:   #86868D;
 $snow-white:    #F1F1F1;
 $ash-gray: #E8E8E8;
