--- a/design/src/sass/project/_global.scss
+++ b/design/src/sass/project/_global.scss
@@ -2,6 +2,7 @@
 
 html {
   @include fluid-type($min_width, $max_width, $min_font, $max_font);
+  scroll-behavior: smooth;
 }
 body {
   padding: 0;
