--- a/design/src/sass/project/pages/_portfolio.scss
+++ b/design/src/sass/project/pages/_portfolio.scss
@@ -1,6 +1,6 @@
 .portfolio {
     &,
-    &--body {
+    &__body {
         position: relative;
         width: 100%;
         height: 100vh;
@@ -405,6 +405,9 @@
             font-size: 2em;
             font-weight: 700;
         }
+        &--secondary {
+            margin-bottom: .5em;
+        }
     }
     .go-to-other {
         overflow: hidden;
@@ -417,6 +420,7 @@
     }
     &__header {
         display: block;
+        padding-bottom: 4em;
     }
     &__list {
         position: absolute;
@@ -511,6 +515,19 @@
             }
         }
     }
+    &__image {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: flex-start;
+        margin-bottom: 2em;
+    }
+    &__body {
+        p {
+            font-size: 1.1rem;
+            font-weight: 400;
+        }
+    }
     &--ux {
         .page-back {
             color: $base-light;
@@ -588,5 +605,46 @@
                 }
             }
         }
+    }
+}
+
+.box-caller {
+    .title {
+        line-height: .9;
+        font-size: 3.5rem;
+        font-weight: 700;
+        text-transform: uppercase;
+
+        @media (max-width: $screen-tablet) and (orientation: landscape) {
+            width: 45vw;
+            font-size: 2.5em;
+        }
+        @media (min-width: $screen-tablet) {
+            width: auto;
+            font-size: 6.5em;
+        }
+
+        b {
+            font-size: 2em;
+            font-weight: 700;
+        }
+    }
+    .go-to-other {
+        overflow: hidden;
+        display: inline-block;
+        vertical-align: middle;
+        width: 1em;
+        height: 1em;
+        border-radius: 100%;
+        text-indent: -100vw;
+        background-color: $base-dark;
+    }
+}
+
+.bg-img-invisible {
+    background-size: cover;
+
+    img {
+        opacity: 0;
     }
 }
